# vibe-trade-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  REVIEW.md  formatter_schema.json  langgraph.json  pyproject.toml  system_prompt.txt
.github/workflows/: ci.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
scripts/: generate_schema.py
src/: __init__.py  agent.py  config.py  main.py
src/agent/: __init__.py  agent.py
src/api/: __init__.py  handlers.py  models.py
src/graph/: __init__.py  agent.py  auth.py  checker_agent.py  config.py  format_questions.py  graph.py  mcp_client.py  middleware.py  models.py  prompts.py  state.py  supervisor.py  user_agent.py  user_agent_node.py  verification_tool.py
src/graph/nodes/: __init__.py  base.py  create_strategy_node.py  done_formatter.py  format_questions.py  supervisor.py  supervisor_sub_agents.py  user_agent.py
src/graph/tools/: __init__.py  mcp_tools.py
src/services/: __init__.py  conversation_store.py  rate_limiter.py
tests/: README.md  __init__.py  conftest.py  test_agent.py  test_config.py  test_graph.py  test_graph_integration.py  test_mcp_client.py  test_mcp_tools.py  test_verification_tool.py
